# ScoutFlow

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docs-check.yml  h5-five-gate.yml
apps/capture-station/: eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: 00-START-HERE.md  BATCH-TRANSCRIPTION-MASTER-ROADMAP-2026-05-08.md  COLLECTION-LINE-MASTER-SPEC-2026-05-07.md  PRD-v1-2026-05-02.md  PRD-v1.2-amendment-2026-05-03.md  PRD-v2-2026-05-04.md  SRD-v1-2026-05-02.md  SRD-v1.1-amendment-2026-05-03.md  SRD-v1.2-amendment-2026-05-03.md  SRD-v2-2026-05-04.md  current.md  decision-log.md  dispatch-template.md  project-context.md  shoulders-index.md  task-index.md
docs/PRD-amendments/: prd-v2.1-strong-visual-h5-para-pr-factory-candidate-2026-05-04.md
docs/SRD-amendments/: db-vnext-srd-v3-candidate-2026-05-04.md  h5-bridge-para-vault-srd-v3-candidate-2026-05-04.md
docs/ScoutFlow-project-organization-docs-v0/: ScoutFlow-AGENTS-draft-v0.1.md  ScoutFlow-Claude-Design-Brief-v0.1.md  ScoutFlow-Phase0-Bootstrap-Checklist-v0.1.md  (+3 more)
example/: PRD-chatgpt-local-agent-collaboration-v0.1-2026-05-03.md  README.md  github_queue_smoke.py  scheme-c-github-queue-harness-srd.md  smoke_task.json  test_github_queue_smoke.py
examples/: hello-world.ts
tests/: conftest.py
tools/: check-docs-redlines.py  check-secrets-redlines.py  check-successor-pack-manifest.py  pack_lint.py  refresh-start-here.py  scoutflow_pr_factory.py
(+1824 files in other folders)
