[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scoutflow"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.135",
  "pydantic>=2.12",
]

[project.optional-dependencies]
test = [
  "httpx>=0.28",
  "pytest>=9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
